<resources>
    <string name="app_name">lifecounter</string>
    <string name="lives_left">Lives Left:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="plus_five">+5</string>
    <string name="minus_five">-5</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 3</string>
    <string name="player_four">Player 4</string>


</resources>
